# SmartFileOrganizer

./: .cursorignore  .gitignore  .replit  ALTERNATIVE_AI_MODELS.md  CHANGELOG.md  DEVELOPER_GUIDE.md  QUICK_START_GUIDE.md  README.md  ai_analyzer.py  ai_model_demo.py  create_excel_test.py  extracted_content_metadata.json  file_analyzer.py  file_organizer.py  gui.py  main.py  pyproject.toml  replit.nix  requirements.txt  test_ai_analyzer.py  test_api_keys.py  test_audio_analysis.py  test_database_connector.py  test_database_connector_simple.py  test_debug.py  test_document_organizer.py  test_image_analyzer.py  test_lite_audio.py  test_media_integration.py  test_media_plugins.py  test_pdf_parser.py  test_postgresql_connector.py  test_v2_plugins.py  test_video_analyzer_optimized.py  utils.py
ROADMAP/: ROADMAP.md  Stage 1 Implementation.md  Stage 1 Plan.md  Stage 2 Plan.md  Stage 3 Plan.md  Stage 4 Plan.md
ai_document_organizer_v2/: __init__.py  media_integration.py  test_plugin_system.py
attached_assets/: Pasted--SmartFileOrganizer-python-main-py-2025-03-09-19-48-45-149-AIDocumentOrganizer-INFO-Starti-1741564173966.txt
config/: ocr_config_example.json
docs/: ALTERNATIVE_AI_MODELS.md  DEPENDENCIES.md  DEVELOPER_GUIDE.md  QUICK_START_GUIDE.md  README.md
packaging/: PACKAGING.md  ai_document_organizer.spec  auto_py_to_exe_guide.md  build.bat  build_exe.py  cx_freeze_guide.md  installer.nsi  setup_cx_freeze.py  simple_build.py  test_pyinstaller.py  version_info.txt
src/: __init__.py  ai_analyzer.py  ai_service_factory.py  cloud_integration.py  duplicate_detector.py  file_analyzer.py  file_organizer.py  file_parser.py  format_converter.py  gui.py  image_analyzer.py  logging_config.py  media_analyzer.py  ocr_service.py  openai_analyzer.py  organization_rules.py  organization_scheme.py  search_engine.py  settings_manager.py  tag_manager.py  transcription_service.py  vector_search.py
test_files/: sales_data.xlsx  sample_doc.txt
test_output/: test_output_Report.md
tests/: __init__.py  lite_audio_analyzer.py  test_advanced_audio_features.py  test_ai_analyzer.py  test_ai_services.py  test_audio_analyzer_optimized.py  test_cloud_sync.py  test_deep_relationships.py  test_document_organizer.py  test_package.py  test_relationships.py  (+2 more)
(+126 files in other folders)
